
syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.enterprise.grpc";

service UserService {
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc GetUser (UserIdRequest) returns (UserResponse);
  rpc DeleteUser (UserIdRequest) returns (DeleteResponse);
}

message UserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UserIdRequest {
  int64 id = 1;
}

message DeleteResponse {
  string message = 1;
}
